# hello-agent-assignment

./: README.md
packaged-agent/: .env  README.md  pyproject.toml
packaged-agent/src/packaged_agent/: main.py
simple-agent/: README.md  main.py
